--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_wait.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_wait.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.user.waitActivity">
+    tools:context=".screens.user.WaitActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
