Qr casi finalizado

--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_qr.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_qr.xml
@@ -5,6 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.user.QrActivity">
+    tools:context=".screens.user.QrActivity"
+    android:background="@color/black">
+
+    <ImageView
+        android:id="@+id/qrImageView"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.288" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
