Qr casi finalizado

--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_qr.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_qr.xml
@@ -14,8 +14,30 @@
         android:layout_height="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.288" />
+        app:layout_constraintVertical_bias="0.494" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SCAN TO SYNC"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/qrImageView"
+        app:layout_constraintEnd_toEndOf="@+id/qrImageView"
+        app:layout_constraintStart_toStartOf="@+id/qrImageView"
+        android:fontFamily="@font/k2d_bold"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hold to regenerate"
+        android:textColor="#736A6A"
+        android:textSize="12dp"
+        android:fontFamily="@font/k2d_medium"
+        app:layout_constraintEnd_toEndOf="@+id/qrImageView"
+        app:layout_constraintStart_toStartOf="@+id/qrImageView"
+        app:layout_constraintTop_toBottomOf="@+id/qrImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
