--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,26 @@
 
     <ImageView
         android:id="@+id/splash_logo"
-        android:layout_width="182dp"
-        android:layout_height="153dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.207" />
 
-    <Button
+    <TextView
         android:id="@+id/nextActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="30dp"
+        android:background="@drawable/roundlarge_button"
         android:text="Next"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="@+id/splash_logo"
         app:layout_constraintStart_toStartOf="@+id/splash_logo"
-        app:layout_constraintTop_toBottomOf="@+id/splash_logo"
-        tools:ignore="MissingConstraints"></Button>
+        app:layout_constraintTop_toBottomOf="@+id/splash_logo"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
